--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__title">Привет<br>мир!</h1>
+    <h1 class="header__title">Привет,<br>мир!</h1>
   </header>
   <article class="article article_whitebg article_first">
     <h2 class="black">Это моя первая<br>страница!</h2>
